--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -390,15 +390,15 @@ ar:
   smooch_bot_message_confirmed: |-
       شكرا لكم. سوف تساعدنا رسالتك في بحث مدى انتشار المعلومات الخاطئة على WhatsApp خلال هذه الانتخابات.
 
-      تمت إضافة هذا العنصر أيضًا إلى قائمة انتظار التحقق. سنحاول ارسال تقرير إليك خلال 24 ساعة ، لكن يرجى ملاحظة أننا لا نستطيع الرد على كل طلب.
+      تمت إضافة هذا العنصر إلى قائمة انتظار التحقق. سنحاول ارسال تقرير إليك خلال 24 ساعة ، لكن يرجى ملاحظة أننا لا نستطيع الرد على كل طلب.
   smooch_bot_message_unconfirmed: نظرًا لأنك لم ترد  بـ 1 ، فلن نقوم بمعالجة رسالتك. شكرا لكم.
   smooch_bot_message_type_unsupported: عذرًا ، لا ندعم هذا النوع من الرسائل بعد للتحقق من صحتها.
   smooch_bot_message_sent: لقد أرسلت بالفعل هذه الرسالة من قبل.
   smooch_bot_meme: إليك ميم أنشأناه بناء على العنصر الذي أرسلته للتحقق منه. لعرض المزيد %{url}.
   smooch_bot_result: |-
-      [تقرير التحقيق] لقد تحققنا مما أرسلته لنا ، واستنتجنا أن هذا العنصر *%{status}*.
+      [تقرير التحقيق] لقد تم  تصنيف العنصر الذي أرسلته لنا أنه *%{status}*.
 
-      فيما يلي الخطوات التي اتخذناها لتحديد هذا : %{url}
+      فيما يلي الخطوات التي اتخذناها لتحديد ذلك : %{url}
   smooch_bot_ask_for_confirmation: |-
       شكرا لإرسال هذه الرسالة.
 
@@ -406,6 +406,11 @@ ar:
 
       ليقول نعم ، * الرجاء الرد بـ 1 *. أي رد آخر سينهي طلبك.
   smooch_bot_window_closing: إن حجم الطلبات مرتفع للغاية ، ولم نتمكن من معالجة طلبك بعد. شكرا لك مرة اخرى على طلبك. إذا كان لديك رسالة أخرى لتقديمها ، فالرجاء القيام بذلك.
+  smooch_bot_not_final: '[تقرير التحقيق - تصحيح] لقد حدث خطأ في تصنيف العنصر الذي أرسلته لنا على أنه *%{status}*. ما زال العنصر في قائمة اﻹنتظار للمزيد من التحقق.'
+  smooch_bot_result_changed: |-
+      [تقرير التحقيق - تصحيح] لقد تغير تصنيف العنصر الذي أرسلته لنا من *%{previous_status}* إلى *%{status}*.
+
+      فيما يلي الخطوات التي اتخذناها لتحديد ذلك : %{url}
   project_export_download_mail_csv: |-
       مرحباً !
 
