--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -607,3 +607,6 @@ en:
   embed_description: Description
   other_language: Other
   relationship_item_has_parent: This item is already a child of another item
+  smooch_requests: Requests
+  smooch_requests_asc: Least requested
+  smooch_requests_desc: Most requested
