Update l10n [skip ci]

--- a/config/locales/bn.yml
+++ b/config/locales/bn.yml
@@ -57,3 +57,9 @@ bn:
 
       হ্যাঁ বলার জন্য, * 1 * দিয়ে উত্তর দিন। অন্য কোন প্রতিক্রিয়া আমাদের কথোপকথন শেষ হবে।
   smooch_bot_window_closing: টিপলাইনে অনুরোধগুলির পরিমাণ খুব বেশি, এবং আমরা এখনো আপনার অনুরোধটি সমাধান করতে সক্ষম নই। জমা দেওয়ার জন্য আপনাকে ধন্যবাদ।
+  smooch_bot_not_final: '[যাচাইকরণ প্রতিবেদন - সংশোধন] আপনি যে বার্তাটি আমাদের সাথে ভাগ করেছেন তা ভুলভাবে * {status} * হিসাবে চিহ্নিত হয়েছে। এটা এখনও আরও যাচাইয়ের জন্য আমাদের সারিতে আছে।'
+  smooch_bot_result_changed: |-
+      [যাচাইকরণ প্রতিবেদন - সংশোধন] আপনি আমাদের সাথে যে বার্তাটি ভাগ করেছেন সেটি * * {পূর্ব_ স্ট্যাটাস} * থেকে  {স্ট্যাটাস} * থেকে পরিবর্তিত হয়েছে।
+
+      এটি নির্ধারণ করতে আমরা যে পদক্ষেপগুলি গ্রহণ করেছি তা এখানে:
+      {url}
