--- a/config/locales/ml.yml
+++ b/config/locales/ml.yml
@@ -145,7 +145,7 @@ ml:
   smooch_bot_message_unconfirmed: 1 എന്ന് മറുപടി അയക്കാത്തതിനാല്‍ താങ്കളുടെ വിഷയം കൂടുതല്‍  പരിശോധനകള്‍ക്ക് വിധേയമാക്കുന്നതല്ല.
   smooch_bot_message_type_unsupported: ക്ഷമിക്കണം, ഈ ഫോര്‍മാറ്റിലുള്ള ഫയലുകള്‍ പരിശോധനക്കായി സ്വീകരിക്കാന്‍ സാധ്യമല്ല
   smooch_bot_message_sent: താങ്കളിത് നേരത്തെ തന്നെ ഞങ്ങള്‍ക്കയച്ചിട്ടുണ്ട്
-  smooch_bot_meme: താങ്കളയച്ച വിവരങ്ങള്‍ ഉപയോഗിച്ചുണ്ടാക്കിയ  മീം ആണിത്. ഇതൊന്ന് കണ്ടു നോക്കൂ. കൂടുതൽ വിവരങ്ങള്‍ക്ക് ഇവിടെ നോക്കൂ %{url}
+  smooch_bot_meme: താങ്കളയച്ച വിവരങ്ങള്‍ ഉപയോഗിച്ചുണ്ടാക്കിയ  മീം ആണിത്. കൂടുതൽ വിവരങ്ങള്‍ക്ക് ഇവിടെ നോക്കൂ %{url}
   smooch_bot_result: |-
       [പരിശോധനാ റിപ്പോര്‍ട്ട്] താങ്കള്‍ ഞങ്ങളുമായി പങ്കുവച്ച വിഷയം *1%{status}* എന്ന് അടയാളപ്പെടുത്തുന്നു.
 
@@ -153,3 +153,9 @@ ml:
   smooch_bot_ask_for_confirmation: |-
       താങ്കളുടെ സന്ദേശത്തിന് നന്ദി. ഇത് 2019ലെ ലോക് സഭാ തെരഞ്ഞെടുപ്പുമായി ബന്ധപ്പെട്ട വ്യാജവിവരമാണെന്ന് സംശയമുണ്ടോ ? ഉണ്ടെങ്കില്‍ 1 എന്ന് മറുപടി അയക്കകുക. ഇല്ലെങ്കില്‍ ഈ സംഭാഷണം ഇവിടെ അവസാനിപ്പിക്കാം.
   smooch_bot_window_closing: ടിപ് ലൈനിലേക്ക് കിട്ടുന്ന ചോദ്യങ്ങളുടെ എണ്ണം വളരെ വലുതാണ്. താങ്കളുടെ വിഷയത്തിന് ഇതുവരെ പരിഹാരം കാണാനായിട്ടില്ല. എന്നിരുന്നാലും ബന്ധപ്പെട്ടതിന് നന്ദി. മറ്റെന്തെലും വിഷയമുണ്ടെങ്കില്‍ അതും ഉന്നയിക്കൂ.
+  smooch_bot_not_final: '[പരിശോധനാ റിപ്പോര്‍ട്ട്-തിരുത്ത്] താങ്കളയച്ച സന്ദേശം *1%{status} * എന്ന് തെറ്റായി അടയാളപ്പെടുത്തിയതാണ്. അത് ഇപ്പോഴും പരിശോധനക്കായുള്ള വരിയിലാണ്. '
+  smooch_bot_result_changed: |-
+      താങ്കളുടെ  *%{previous_status}* എന്നടയാളപ്പെടുത്തിയിരുന്ന സന്ദേശം
+      *%{status}*
+
+      എന്നാക്കി മാറ്റിയിരിക്കുന്നു. ഈ നിഗമനത്തിലെത്താന്‍ ഞങ്ങള്‍ സ്വീകരിച്ച മാര്‍ഗ്ഗം ഇതാണ്  3 %{url}.
