--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -49,8 +49,11 @@ hi:
   smooch_bot_message_sent: यह संदेश आप हमें पहले ही भेज चुके हैं।
   smooch_bot_meme: आपके द्वारा भेजी गई सामग्री के आधार पर हमने एक मीम तैयार किया है जिसके तथ्यों की जांच के लिए आपने अनुरोध किया था। इसके बारे में और अधिक जानें %{url}
   smooch_bot_result: |-
-      सत्यापन रिपोर्ट- आपके द्वारा साथ साझा किया गया संदेश चिह्नित है।%{status}
+      [सत्यापन रिपोर्ट] आपके द्वारा हमारे साथ साझा किया गया संदेश चिह्नित है।*%{status}*
       इसे निर्धारित करने के लिए हमने यहां कदम उठाए हैं: %{url}
   smooch_bot_ask_for_confirmation: |-
       इस संदेश को भेजने के लिए धन्यवाद। क्या आपको संदेह है कि यह भारतीय आम चुनाव 2019 से संबंधित गलत सूचना है? अगर आप हां करते हैं तो 1 लिखें। कुछ और लिखेंगे तो हम संपर्क जारी नहीं रख सकेंगे।
   smooch_bot_window_closing: टिपलाइन में अनुरोधों की संख्या बहुत अधिक है और अभी तक आपके अनुरोध का समाधान नहीं कर पाए हैं। सबमिट करने के लिए धन्यवाद। यदि आपके पास सबमिट करने के लिए कोई और संदेश है तो प्रेषित करें।
+  smooch_bot_not_final: '[सत्यापन रिपोर्ट - सुधार] आपके द्वारा हमारे साथ साझा किया गया संदेश गलत तरीके से चिह्नित किया गया था। *%{status}* आगे के सत्यापन के लिए यह अभी भी हमारी पंक्ति में है।'
+  smooch_bot_result_changed: |-
+      [सत्यापन रिपोर्ट - सुधार] आपके द्वारा हमारे साथ साझा किया संदेश बदल गया है *%{previous_status}* से *%{status}* इसे निर्धारित करने के लिए हमने यहां पहल की है:%{url}
