--- a/config/locales/te.yml
+++ b/config/locales/te.yml
@@ -57,3 +57,7 @@ te:
   smooch_bot_ask_for_confirmation: |-
       ఈ సందేశము పంపినందుకు ధన్యవాదములు. మీరు దీన్ని 2019 ఎన్నికలకు సంబంధించిన తప్పు వార్త అనుకుంటున్నారా? ఔను అయితే 1 అని జవాబు ఇవ్వగలరు. వేరొక జవాబు ఏదైనా ఈ సంభాషనను అంతం చేయును.
   smooch_bot_window_closing: టిప్ లైన్ లొ మెసేజులు అధిక సంఖ్య లొ ఉన్నాయి. మేము మీ అభ్యర్ధన ని ఇంకా పరిష్కరించలేదు. సందేశము పంపినందుకు ధన్యవాదములు. మీరు ఇంకొ మెసేజ్ పంపదలిచినచొ దయచేసి పంపండి.
+  smooch_bot_not_final: '[వెరిఫికేషన్ రిపొర్ట్ - దిద్దుబాటు] మీరు పంపిన మెస్సెజ్ %{status}అని తప్పుగా మార్క్ చేయబడినది. మీ మెస్సెజ్ ఇంకా మా క్యూ-లైన్ లొ వెరిఫికేషన్ కొరకు ఉంచబడినది.  '
+  smooch_bot_result_changed: |-
+      [వెరిఫికేషన్ రిపొర్ట్ - దిద్దుబాటు] మీరు పంపిన మెస్సెజ్ %{previous_status}నుంచి
+      %{status}అని మారినది. ఈ విధముగా గుర్తించడానికి మేము అనుసరించిన విధానము %{url}
