--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -417,6 +417,32 @@ en:
   mail_subject_delete_user: "[%{team}] A user was deleted"
   mail_body_delete_user: A user account was deleted and its content was reassigned
     to anonymous user %{id}
+  mail_subject_security_alert: "[Check] Security alert"
+  mail_body_security_ip_alert: "Hello,
+    <p>We noticed a new login attempt to your Check account %{username}, from a new (%{id_address}).</p>
+    "
+  mail_body_security_device_alert: "Hello,
+    <p>We noticed a new login attempt to your Check account %{username}, from a new (%{device_name}) device.</p>
+    "
+  mail_body_security_failed_alert: "Hello,
+    <p>We noticed that someone tried to log into your account  account four consecutive times and failed. Here are the details of that attempt</p>
+    "
+  mail_footer_security_alert: "
+    <p>*Login Timestamp(s)</p>
+    <p>*Browser(s)</p>
+    <p>*Operating System(s)</p>
+    <p>*Location(s)</p>
+
+    <p>If this was you, you can safely disregard this email. If this wasn't you, 
+    please contact us at %{support_email} to reset your password to protect your account.</p>
+
+
+    <p>Thanks</p>
+    <p>— The Check team</p>
+    <p>Why are you receiving this email? You have turned on login security notifications from your profile privacy tab. To stop receiving these e-mails, please turn this setting off from the privacy tab.
+    Learn more about our %{privacy_policy}.</p>
+    "
+  privacy_policy: Privacy Policy
   archive_keep_backup: Video Vault
   archive_pender_archive: Keep screenshots
   archive_archive_is: Archive.is
