Ticket #7524: Do not accept unsafe links and ban Smooch users that send unsafe URLs

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -595,6 +595,7 @@ en:
     errors that are reported there - the previously-imported items will not be duplicated.</p>
     <p>— The %{app_name} team</p>"
   pender_url_invalid: This link is invalid.
+  pender_url_unsafe: This link is unsafe.
   verification_status_deadline: Deadline
   verification_status_deadline_asc: Due soonest
   verification_status_deadline_desc: Due latest
